crates/formatter/tests/snapshots/snapshots__synapse__main__delta__74__01_user_directory_stale_remote_users.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2022 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- Table containing a list of remote users whose profiles may have changed
-- since their last update in the user directory.
create table user_directory_stale_remote_users (
	-- The User ID of the remote user whose profile may be stale.
	user_id text not null primary key,

	-- The server name of the user.
	user_server_name text not null,

	-- The timestamp (in ms) after which we should next try to request the user's
	-- latest profile.
	next_try_at_ts bigint not null,

	-- The number of retries so far.
	-- 0 means we have not yet attempted to refresh the profile.
	-- Used for calculating exponential backoff.
	retry_counter integer not null
);

-- Create an index so we can easily query upcoming servers to try.
create index user_directory_stale_remote_users_next_try_idx
	on user_directory_stale_remote_users (next_try_at_ts, user_server_name);

-- Create an index so we can easily query upcoming users to try for a particular server.
create index user_directory_stale_remote_users_next_try_by_server_idx
	on user_directory_stale_remote_users (user_server_name, next_try_at_ts);
