crates/formatter/tests/snapshots/snapshots__synapse__main__delta__74__05_events_txn_id_device_id.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2023 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- For MSC3970, in addition to the (room_id, user_id, token_id, txn_id) -> event_id mapping for each local event,
-- we also store the (room_id, user_id, device_id, txn_id) -> event_id mapping.
--
-- This adds a new event_txn_id_device_id table.

-- A map of recent events persisted with transaction IDs. Used to deduplicate
-- send event requests with the same transaction ID.
--
-- Note: with MSC3970, transaction IDs are scoped to the
-- room ID/user ID/device ID that was used to make the request.
--
-- Note: The foreign key constraints are ON DELETE CASCADE, as if we delete the
-- event or device we don't want to try and de-duplicate the event.
create table if not exists event_txn_id_device_id (
	event_id text not null,
	room_id text not null,
	user_id text not null,
	device_id text not null,
	txn_id text not null,
	inserted_ts bigint not null,
	foreign key (event_id) references events (event_id) on delete cascade,
	foreign key (user_id, device_id) references devices (user_id, device_id)
		on delete cascade
);

-- This ensures that there is only one mapping per event_id.
create unique index if not exists event_txn_id_device_id_event_id
	on event_txn_id_device_id (event_id);

-- This ensures that there is only one mapping per (room_id, user_id, device_id, txn_id) tuple.
-- Events are usually looked up using this index.
create unique index if not exists event_txn_id_device_id_txn_id
	on event_txn_id_device_id (room_id, user_id, device_id, txn_id);

-- This table is cleaned up regularly, removing the oldest entries, hence this index.
create index if not exists event_txn_id_device_id_ts
	on event_txn_id_device_id (inserted_ts);
